# hamon

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Hamon.cpp  Hamon.h  Hamon.hpp  HamonCube.cpp  HamonCube.h  HamonCube.hpp  HamonNode.cpp  HamonNode.h  HamonNode.hpp  Kpack.cpp  Kpack.h  Make.cpp  Make.hpp  README.md  hamon.txt  hamon_tests  hamon_tests[1]_include.cmake  hamon_tests[1]_tests.cmake  input.txt  main.cpp  make.hc  make_r710_2cpu.hc
.github/: ci.yml
.github/workflows/: ci.yml
apps/hamon/: main.cpp
help/: Hamon.md  HamonCube.md  HamonNode.md
include/: Hamon.hpp  HamonCube.hpp  HamonNode.hpp  Make.hpp
src/: Hamon.cpp  HamonCube.cpp  HamonNode.cpp  Make.cpp
tests/: test_hamon.cpp  test_hamon_cube.cpp  test_hamon_node.cpp
